@@ -4,6 +4,7 @@ MyFaces Release Notes
 ----------------------------------------------------------------------
 Changes in Release 1.0.10
 * added renderFacetsIfSinglePage to x:dataScroller
+* aliasBean : avoid evaluating expressions on each phase
 * closed MYFACES-177
 * closed MYFACES-199
 * closed MYFACES-209
